--- a/newyear1.html
+++ b/newyear1.html
@@ -5,7 +5,7 @@ body {background-color: powderblue;}
 h1   {color: blue;}
 p    {color: red;}
 </style>
-<img src="C:\Users\Lenovo\Pictures\Feedback\congratulations.jpg"width="1024" height="576">
+<img src="congratulations.jpg"width="1024" height="576">
 <h2>
 
 From your
