--- a/form.html
+++ b/form.html
@@ -4,10 +4,10 @@
 
 <form action="/action_page.php">
   First name:<br>
-  <input type="text" name="firstname" value="Mickey">
+  <input type="text" name="firstname" value="yashwanth">
   <br>
   Last name:<br>
-  <input type="text" name="lastname" value="Mouse">
+  <input type="text" name="lastname" value="sai">
   <br>
 Phone:<br>
   <input type="int" name="phone" value=9100156606>
