--- a/Try.html
+++ b/Try.html
@@ -20,7 +20,7 @@
                  .Cells (iRow, 2).value=Document.GetElementsByName ("lname") (0).Value  
                  .Cells (iRow, 3).value=Document.GetElementsByName ("Add1") (0).Value  
                  .Cells (iRow, 4).value=Document.GetElementsByName ("Add2") (0).Value  
-                 MsgBox "Data Added Successfully‚Äù, vbinformation  
+                 MsgBox "Data Added Successfullyî, vbinformation  
                  Document.GetElementsByName ("fname") (0).Value=""  
                  Document.GetElementsByName ("lname") (0).Value=""  
                  Document.GetElementsByName ("Add1") (0).Value=""  
